Some copy paste remove
SVN-Revision: 14022